# RAG_project

./: AMR.py  README.md  app.py  fun.py  main.py  main_llama.py  main_new.py  notes.txt  pyproject.toml  subqueries.py  test.py
custom_classes/: custom_perplexity_llm.py  custom_retriever.py
functions/: add_company_name.py  add_time_period.py  add_year.py  create_statements_data.py  jsonl_to_txt_files.py
prompts/: llm_re_ranker_prompt_template.py  qa_prompt_template.py  sub_question_prompt_template.py  vector_store_query_prompt_template.py
vector_store/: default__vector_store.json  docstore.json  index_store.json
